--- a/.github/workflows/hnfbot.yml
+++ b/.github/workflows/hnfbot.yml
@@ -47,6 +47,8 @@ jobs:
           TWITTER_POSTER_ACCESS_TOKEN: ${{ secrets.TWITTER_POSTER_ACCESS_TOKEN }}
           TWITTER_POSTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_POSTER_ACCESS_TOKEN_SECRET }}
           NOSTR_PRIVATE_KEY: ${{ secrets.NOSTR_PRIVATE_KEY }}
+          GIST_ID: ${{ secrets.GIST_ID }}
+          GIST_TOKEN: ${{ secrets.GIST_TOKEN }}
       - name: Upload posted.txt artifact
         uses: actions/upload-artifact@v4
         with:
