--- a/.github/workflows/hnfbot.yml
+++ b/.github/workflows/hnfbot.yml
@@ -18,8 +18,8 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Install dependencies
-        run: npm install
+      - name: Use npm mirror (optional)
+        run: npm config set registry https://registry.npmmirror.com
 
       - name: Set up Python
         uses: actions/setup-python@v5
